# silent-decisions-proof

./: .gitignore  Cargo.toml  HANDOFF_SECTION1_INTRODUCTION.md  README.md  ROADMAP.md  bench_results.txt  figures.tex  refs.bib  section1_introduction.tex  section2_related_work.tex  section3_type_system.tex  section4_theorem.tex  section5_benchmarks.tex  section6_discussion.tex  section7_conclusion.tex
benches/: verdict_construction.rs
docs/: BOOK_PROPOSAL.md  draft-soares-btv-inclusion-receipt-00.txt
examples/: emergency_escalation.rs  health_triage.rs  hiring_screening.rs
paper1/: abstract.tex  section3_type_system.tex  section6_discussion.tex
paper2/: Cargo.toml  README.md  abstract.tex  bench_results.txt  main.tex  refs.bib  section1_introduction.tex  section2_related_work.tex  section3_formal_model.tex  section4_implementation.tex  section4_theorem.tex  section5_benchmarks.tex  section6_discussion.tex  section7_conclusion.tex
paper2/benches/: delivery_bench.rs
paper2/src/: lib.rs  log_server.rs  main.rs
paper2/tests/: compile_tests.rs  integration_tests.rs
paper2/tests/sui/: delivery_struct_literal.rs  receipt_drop_silent.rs
paper2/tests/ui/: delivery_struct_literal.stderr  delivery_token_reuse.rs  delivery_token_reuse.stderr  delivery_without_receipt.rs  delivery_without_receipt.stderr  receipt_consume_external.rs  receipt_consume_external.stderr  receipt_drop_silent.rs  receipt_drop_silent.stderr  receipt_struct_literal.rs  receipt_struct_literal.stderr  receipt_token_reuse.rs  receipt_token_reuse.stderr
paper3/: abstract.tex  main.tex  refs.bib  section1_introduction.tex  section2_security_model.tex  section3_protocol.tex  section4_zk_circuit.tex  section5_security_proofs.tex  section6_implementation.tex  section7_discussion.tex  section8_conclusion.tex
paper4/: abstract.tex  main.tex  refs.bib  section1_introduction.tex  section2_case_studies.tex  section2_voluntary_failure.tex  section3_tco_model.tex  section4_forensic_analysis.tex  section4_interviews.tex  section5_crossover.tex  section6_compliance_credit.tex  section7_discussion.tex  section8_conclusion.tex
paper5/: abstract.tex  main.tex  refs.bib  section1_introduction.tex  section2_related_work.tex  section3_constitutional_mapping.tex  section4_independence.tex  section6_conclusion.tex  (+1 more)
(+39 files in other folders)
