[package]
name = "silent-decisions-proof"
version = "0.1.0"
edition = "2021"
description = "Machine-checkable proof for the Constitutional Enclosure Theorem"
repository = "https://github.com/danzeroum/silent-decisions-proof"
license = "MIT"

[[bin]]
name = "silent-decisions-proof"
path = "src/main.rs"

[features]
test-support = []

[dependencies]
blake3 = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"

[dev-dependencies]
trybuild = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "verdict_construction"
harness = false
